Prints User + Products elements in page

--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -16,3 +16,7 @@ html body:not(#guest) {
     padding-left: 250px;
     background-color: #f6f5ff;
 }
+
+.grey-bg {
+    background-color: #F5F7FA;
+}
