--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11008,9 +11008,8 @@ body {
   padding: 10px 14px;
   background: var(--sidebar-color);
   z-index: 100;
+  /* ===== Reusable code - Here ===== */
 }
-
-/* ===== Reusable code - Here ===== */
 
 .sidebar li {
   height: 50px;
@@ -11020,8 +11019,7 @@ body {
   margin-top: 10px;
 }
 
-.sidebar header .image,
-.sidebar i {
+.sidebar header .image {
   min-width: 60px;
   border-radius: 6px;
 }
@@ -11034,14 +11032,12 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 20px;
-}
-
-.sidebar .text,
-.sidebar i {
   color: var(--text-color);
 }
 
-/* =========================== */
+.sidebar .text {
+  color: var(--text-color);
+}
 
 .sidebar header {
   position: relative;
@@ -11052,21 +11048,21 @@ body {
   align-items: center;
 }
 
-.sidebar header .logo-text {
-  display: flex;
-  flex-direction: column;
-}
-
-header .image-text .name {
+.sidebar header .image-text .name {
   margin-top: 2px;
   font-size: 18px;
   font-weight: 600;
 }
 
-header .image-text .profession {
+.sidebar header .image-text .profession {
   font-size: 16px;
   margin-top: -2px;
   display: block;
+}
+
+.sidebar header .logo-text {
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar header .image {
@@ -11131,7 +11127,7 @@ header .image-text .profession {
   overflow-y: scroll;
 }
 
-.menu-bar::-webkit-scrollbar {
+.sidebar .menu-bar::-webkit-scrollbar {
   display: none;
 }
 
@@ -11156,5 +11152,9 @@ header .image-text .profession {
 html body:not(#guest) {
   padding-left: 250px;
   background-color: #f6f5ff;
+}
+
+.grey-bg {
+  background-color: #F5F7FA;
 }
 
