--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,12 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-
 //navbar
 @import 'navbar';
-
 //utilis
 @import 'utils';
+//statistics
+@import 'statistics';
