--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11000,6 +11000,7 @@ body {
 /* ===== Sidebar ===== */
 
 .sidebar {
+  text-transform: capitalize;
   position: fixed;
   top: 0;
   left: 0;
@@ -11049,8 +11050,9 @@ body {
 }
 
 .sidebar header .image-text .name {
+  text-transform: uppercase;
   margin-top: 2px;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 600;
 }
 
@@ -11072,8 +11074,12 @@ body {
 }
 
 .sidebar header .image img {
-  width: 40px;
-  border-radius: 6px;
+  margin: 0 20px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
 }
 
 .sidebar .menu {
