--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -28,10 +28,10 @@ body {
     color: #fff;
 }
 
-
 /* ===== Sidebar ===== */
 
 .sidebar {
+    text-transform: capitalize;
     position: fixed;
     top: 0;
     left: 0;
@@ -71,8 +71,9 @@ body {
             display: flex;
             align-items: center;
             .name {
+                text-transform: uppercase;
                 margin-top: 2px;
-                font-size: 18px;
+                font-size: 14px;
                 font-weight: 600;
             }
             .profession {
@@ -90,8 +91,11 @@ body {
             align-items: center;
             justify-content: center;
             img {
-                width: 40px;
-                border-radius: 6px;
+                margin: 0 20px;
+                object-fit: cover;
+                width: 60px;
+                height: 60px;
+                border-radius: 10px;
             }
         }
     }
