changed button + elimate @errors from register

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11136,6 +11136,10 @@ body {
   display: none;
 }
 
+a.dropdown-menu {
+  background-color: red;
+}
+
 .dropdown-toggle::after {
   color: var(--text-color);
 }
