--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -28,6 +28,7 @@ body {
     color: #fff;
 }
 
+
 /* ===== Sidebar ===== */
 
 .sidebar {
@@ -145,6 +146,10 @@ body {
             display: none;
         }
     }
+}
+
+a.dropdown-menu {
+    background-color: red;
 }
 
 .dropdown-toggle::after {
