--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -7,7 +7,7 @@
 :root {
     /* ===== Colors ===== */
     --body-color: #e4e9f7;
-    --sidebar-color: #fff;
+    --sidebar-color: #ffe4be;
     --primary-color: #6cb2eb;
     --primary-color-light: #f6f5ff;
     --toggle-color: #ddd;
@@ -20,7 +20,7 @@ body {
 }
 
 .header-logo {
-    background-color: #fff;
+    background-color: #00ccbc;
 }
 
 ::selection {
