--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -2,8 +2,8 @@
     height: 100vh;
 }
 
-.full-height-minus-navbar {
-    height: 90vh;
+*::-webkit-scrollbar {
+    width: 0 !important;
 }
 
 .flex-center {
@@ -17,7 +17,7 @@ html body:not(#guest) {
     background-image: url("../../public/img/background/Desktop-Background.jpg");
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 }
 
 .grey-bg {
@@ -26,11 +26,19 @@ html body:not(#guest) {
 
 #stats-subtitle .media img,
 #minimal-statistics .media img {
-    width: 100px;
+    width: 120px;
     height: 100px;
 }
 
-.box-shadow-profile {
+#stats-subtitle a,
+#minimal-statistics a {
+    text-transform: capitalize;
+    text-decoration: none;
+    color: #000;
+}
+
+.box-shadow-profile,
+.box-shadow-card {
     box-shadow: 0px 0px 8px 3px rgba(180, 108, 34, 0.8);
 }
 
@@ -45,5 +53,12 @@ html body:not(#guest) {
         div {
             margin: 10px 0;
         }
+    }
+}
+
+#show-product {
+    img {
+        width: 300px;
+        height: auto;
     }
 }
