changed layout show , index , and user

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,11 +8,11 @@
 @import 'navbar';
 //utilis
 @import 'utils';
-
-
 //form product
 @import 'form';
-
 //statistics
 @import 'statistics';
-
+//usercard
+@import 'usercard';
+//product
+@import 'product';
