--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -3,7 +3,7 @@
 }
 
 .full-height-minus-navbar {
-    height: 90vh;
+    // height: 90vh;
 }
 
 .flex-center {
@@ -36,12 +36,12 @@ html body:not(#guest) {
 
 #home {
     img {
-        height: 400px;
+        max-height: 400px;
         object-fit: cover;
         object-position: top center;
     }
     .card-body {
-        height: 300px;
+        min-height: 300px;
         div {
             margin: 10px 0;
         }
