--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11347,20 +11347,20 @@ input:checked + .slider:before {
   letter-spacing: 15px;
 }
 
-.page-item.active .page-link {
+#pagination-bar .page-item.active .page-link {
   background-color: #955e26;
   border: 1px solid #764a1e;
 }
 
-.page-link,
-.page-item.disabled .page-link {
+#pagination-bar .page-link,
+#pagination-bar .page-item.disabled .page-link {
   background-color: #f6993f;
   color: black;
   border: 1px solid rgb(48, 29, 0);
 }
 
-.page-link:hover,
-.page-item.disabled .page-link:hover {
+#pagination-bar .page-link:hover,
+#pagination-bar .page-item.disabled .page-link:hover {
   background-color: #955e26;
   border: 1px solid #9b6127;
   color: white;
