--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11327,6 +11327,12 @@ input:checked + .slider:before {
   font-weight: bold;
 }
 
+#button-edit-user-index {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+}
+
 .media-body {
   text-decoration: none;
   color: black;
