--- a/resources/sass/_usercard.scss
+++ b/resources/sass/_usercard.scss
@@ -3,3 +3,9 @@
     text-transform: uppercase;
     font-weight: bold;
 }
+
+#button-edit-user-index {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+}
