--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11554,6 +11554,9 @@ body {
 
 html body:not(#guest) {
   padding-left: 250px;
+}
+
+html body#guest {
   background-image: url(/images/Desktop-Background.jpg?786d0b88409b6f44eba65c9bed21056a);
   background-position: center;
   background-size: cover;
