--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -1,9 +1,11 @@
 *::-webkit-scrollbar {
     width: 0 !important;
 }
+
 body {
     scrollbar-width: none;
 }
+
 .full-height {
     height: 100vh;
 }
@@ -82,4 +84,15 @@ main {
             height: auto;
         }
     }
+}
+
+// Texts
+
+.t-deliveboo-green {
+    color: $deliveboo-green;
+}
+
+// Backgrounds
+.bg-deliveboo-green {
+    background-color: $deliveboo-green;
 }
