--- a/resources/sass/_navbar2.scss
+++ b/resources/sass/_navbar2.scss
@@ -59,9 +59,9 @@ body {
     box-shadow: 0px 5px 10px 0px #aaa;
     position: fixed;
     width: 100%;
-    background: #fff;
+    background: #00ccbc;
     color: #000;
-    opacity: 0.85;
+    opacity: 0.95;
     z-index: 12;
 }
 
