--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -96,3 +96,8 @@ main {
 .bg-deliveboo-green {
     background-color: $deliveboo-green;
 }
+
+// Borders
+.brd-deliveboo-green {
+    border-bottom: .5px solid $deliveboo-green;
+}
