--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,10 +21,9 @@
 @import 'orders';
 //cartModal
 @import 'cartmodal';
-
 // Animations
 @import 'animations';
-
 // sweet
 @import '~sweetalert2/dist/sweetalert2.min.css';
-
+// sweet
+@import 'foodpills';
