--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -35,6 +35,7 @@ body {
     }
     .logo {
         max-width: 60px;
+        margin-right: 20px;
     }
     .text-logo {
         color: var(--primary-color);
@@ -77,7 +78,7 @@ body {
     height: 100%;
     width: 250px;
     padding: 10px 14px;
-    background: var(--sidebar-color);
+    background-color: #fff;
     z-index: 100;
 
     /* ===== Reusable code - Here ===== */
@@ -187,7 +188,7 @@ body {
 
             i,
             .text {
-                color: var(--sidebar-color);
+                color: #fff;
             }
         }
     }
