--- a/resources/sass/_foodpills.scss
+++ b/resources/sass/_foodpills.scss
@@ -115,17 +115,9 @@
         padding: 5px 15px;
         border: black 1px solid;
         border-radius: 15px;
-        padding: 10px;
-        box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0);
     }
 }
 
-#checkbox li.active {}
-
-input:checked+.active-cs {
-
-    border-radius: 15px;
-    box-shadow: 0px 0px 8px 3px rgba(180, 108, 34, 0.8);
-
-
+#checkbox li.active {
+    background-color: $deliveboo-green;
 }
