--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11516,104 +11516,83 @@ input:checked + .slider:before {
   font-family: "Font Awesome 5 Free";
   content: "\F578";
   font-weight: 900;
-  background-color: yellow;
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Pizza::before {
   font-family: "Font Awesome 5 Free";
   content: "\F818";
   font-weight: 900;
-  background-color: brown;
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Messicano::before {
   font-family: "Font Awesome 5 Free";
   content: "\F816";
   font-weight: 900;
-  background-color: green;
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Mediterranea::before {
   font-family: "Font Awesome 5 Free";
   content: "\F773";
   font-weight: 900;
-  background-color: red;
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Indiano::before {
   font-family: "Font Awesome 5 Free";
   content: "\F5A7";
   font-weight: 900;
-  background-color: blue;
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Giapponese::before {
   font-family: "Font Awesome 6 free";
   content: "\E4C6";
   font-weight: 900;
-  background-color: blue;
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Dolci::before {
   font-family: "Font Awesome 5 free";
   content: "\F786";
   font-weight: 900;
-  background-color: pink;
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Cinese::before {
   font-family: "Font Awesome 5 free";
   content: "\F7FB";
   font-weight: 900;
-  background-color: rgb(241, 26, 223);
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Carne::before {
   font-family: "Font Awesome 5 free";
   content: "\F6D7";
   font-weight: 900;
-  background-color: rgb(238, 145, 15);
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .Internazionale::before {
   font-family: "Font Awesome 5 free";
   content: "\F57C";
   font-weight: 900;
-  background-color: rgb(15, 141, 238);
-  padding: 5px 15px;
-  border: black 1px solid;
-  border-radius: 15px;
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 input:checked + .active-cs {
-  border-radius: 15px;
-  box-shadow: 0px 0px 8px 3px rgba(180, 108, 34, 0.8);
+  box-shadow: 0px 0px 8px 3px #00ccbc;
 }
 
