--- a/resources/sass/_foodpills.scss
+++ b/resources/sass/_foodpills.scss
@@ -3,10 +3,8 @@
         font-family: "Font Awesome 5 Free";
         content: "\f578";
         font-weight: 900;
-        background-color: yellow;
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -15,10 +13,8 @@
         font-family: "Font Awesome 5 Free";
         content: "\f818";
         font-weight: 900;
-        background-color: brown;
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -27,10 +23,8 @@
         font-family: "Font Awesome 5 Free";
         content: "\F816";
         font-weight: 900;
-        background-color: green;
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -39,10 +33,8 @@
         font-family: "Font Awesome 5 Free";
         content: "\f773";
         font-weight: 900;
-        background-color: red;
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -51,10 +43,8 @@
         font-family: "Font Awesome 5 Free";
         content: "\f5a7";
         font-weight: 900;
-        background-color: blue;
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -63,10 +53,8 @@
         font-family: "Font Awesome 6 free";
         content: "\e4c6";
         font-weight: 900;
-        background-color: blue;
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -75,10 +63,8 @@
         font-family: "Font Awesome 5 free";
         content: "\f786";
         font-weight: 900;
-        background-color: pink;
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -87,10 +73,8 @@
         font-family: "Font Awesome 5 free";
         content: "\f7fb";
         font-weight: 900;
-        background-color: rgb(241, 26, 223);
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -99,10 +83,8 @@
         font-family: "Font Awesome 5 free";
         content: "\f6d7";
         font-weight: 900;
-        background-color: rgb(238, 145, 15);
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
@@ -111,17 +93,11 @@
         font-family: "Font Awesome 5 free";
         content: "\f57c";
         font-weight: 900;
-        background-color: rgb(15, 141, 238);
-        padding: 5px 15px;
-        border: black 1px solid;
-        border-radius: 15px;
-
+        border-radius: 5px;
+        font-size: 12px;
     }
 }
 
-
-
-input:checked+.active-cs {
-    border-radius: 15px;
-    box-shadow: 0px 0px 8px 3px rgba(180, 108, 34, 0.8);
+input:checked + .active-cs {
+    box-shadow: 0px 0px 8px 3px #00ccbc;
 }
