--- a/resources/sass/_animations.scss
+++ b/resources/sass/_animations.scss
@@ -1,9 +1,10 @@
 // Animations
 
 .grow {
-    transition: all .2s ease-in-out;
+    transform: scale(.9);
+    transition: all 0.2s ease-in-out;
 }
 
 .grow:hover {
-    transform: scale(1.1);
+    transform: scale(1);
 }
