--- a/resources/sass/_orders.scss
+++ b/resources/sass/_orders.scss
@@ -1,31 +1,11 @@
-#pagination-bar {
-    .page-item.active .page-link {
-        background-color: #955e26;
-        border: 1px solid #764a1e;
-    }
-    .page-link,
-    .page-item.disabled .page-link {
-        background-color: #f6993f;
-        color: black;
-        border: 1px solid rgb(48, 29, 0);
-        &:hover {
-            background-color: #955e26;
-            border: 1px solid #9b6127;
-            color: white;
-        }
-    }
-}
-
 //order-list table
-
 .order-list{
-    background-color: rgb(246, 153, 63, 0.5);
-    border: 1px solid #764a1e;
+    background-color: transparent;
     tr{
-        border: 1px solid #764a1e;  
+        border: 1px solid #019480;  
     }
     thead{
-        background-color: rgb(149, 94, 38, 0.5);
+        background-color: rgba(0, 167, 153, 0.295);
     }
 }
 
