--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -1,15 +1,24 @@
 * {
     font-family: "Montserrat", sans-serif;
 }
-
+.info-cs {
+    color: #fff !important;
+    border-color: #00ccbc !important;
+    background-color: #00ccbc !important;
+    &:hover {
+        color: #fff !important;
+        border-color: rgb(0, 146, 134) !important;
+        background-color: rgb(0, 146, 134) !important;
+    }
+}
 ::-webkit-scrollbar {
-	width: 6px;
-	height: 2px;
+    width: 6px;
+    height: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-	background: $deliveboo-green;
-	border-radius: 10px;
+    background: $deliveboo-green;
+    border-radius: 10px;
 }
 .fw-bold {
     font-weight: bold;
@@ -41,6 +50,10 @@ html body#guest {
 main {
     padding-top: 50px;
     padding-bottom: 100px;
+}
+
+main:not(#guest) {
+    padding-bottom: 0px;
 }
 
 @media only screen and (max-width: 992px) {
