--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11194,10 +11194,6 @@ body {
   border-radius: 10px;
 }
 
-.fw-bold {
-  font-weight: bold;
-}
-
 .full-height {
   height: 100vh;
 }
@@ -11221,13 +11217,9 @@ html body#guest {
   background-repeat: repeat;
 }
 
-main {
-  padding-top: 50px;
-  padding-bottom: 100px;
-}
-
 main:not(#guest) {
-  padding-bottom: 0px;
+  padding-top: 50px;
+  padding-bottom: 130px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -11289,6 +11281,54 @@ main:not(#guest) {
 
 .brd-deliveboo-green {
   border-bottom: 0.5px solid #00ccbc !important;
+}
+
+.product-details {
+  background-color: #fff;
+  padding: 15px;
+  min-height: 140px;
+  box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, 0.5);
+  border-radius: 0px 40px 12px 40px;
+}
+
+.product-details .cropper {
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+  border: 2px;
+  border-radius: 0px 40px 12px 40px;
+}
+
+.product-details img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.cropper {
+  width: 100%;
+  height: 130px;
+  overflow: hidden;
+  border: 2px;
+  border-radius: 0px 40px 12px 40px;
+}
+
+.product-detail {
+  background-color: #fff;
+  padding: 15px;
+  min-height: 500px;
+  box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, 0.5);
+  border-radius: 0px 40px 12px 40px;
+}
+
+.product-detail img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 
 .switch {
