--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -20,9 +20,6 @@
     background: $deliveboo-green;
     border-radius: 10px;
 }
-.fw-bold {
-    font-weight: bold;
-}
 
 .full-height {
     height: 100vh;
@@ -47,13 +44,9 @@ html body#guest {
     background-repeat: repeat;
 }
 
-main {
-    padding-top: 50px;
-    padding-bottom: 100px;
-}
-
 main:not(#guest) {
-    padding-bottom: 0px;
+    padding-top: 50px;
+    padding-bottom: 130px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -120,4 +113,47 @@ main:not(#guest) {
 // Borders
 .brd-deliveboo-green {
     border-bottom: 0.5px solid $deliveboo-green;
+}
+
+// Products
+.product-details {
+    background-color: #fff;
+    padding: 15px;
+    min-height: 140px;
+    box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, 0.5);
+    border-radius: 0px 40px 12px 40px;
+    .cropper {
+        width: 100%;
+        height: 100px;
+        overflow: hidden;
+        border: 2px;
+        border-radius: 0px 40px 12px 40px;
+    }
+    img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+    }
+}
+
+.cropper {
+    width: 100%;
+    height: 130px;
+    overflow: hidden;
+    border: 2px;
+    border-radius: 0px 40px 12px 40px;
+}
+
+.product-detail {
+    background-color: #fff;
+    padding: 15px;
+    min-height: 500px;
+    box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, 0.5);
+    border-radius: 0px 40px 12px 40px;
+    img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+        object-position: center;
+    }
 }
