--- a/resources/sass/_utils.scss
+++ b/resources/sass/_utils.scss
@@ -1,16 +1,23 @@
 * {
     font-family: "Montserrat", sans-serif;
 }
+
+.modal-backdrop {
+    height: 0;
+}
+
 .info-cs {
     color: #fff !important;
     border-color: #00ccbc !important;
     background-color: #00ccbc !important;
+
     &:hover {
         color: #fff !important;
         border-color: rgb(0, 146, 134) !important;
         background-color: rgb(0, 146, 134) !important;
     }
 }
+
 ::-webkit-scrollbar {
     width: 6px;
     height: 2px;
@@ -122,6 +129,7 @@ main:not(#guest) {
     min-height: 140px;
     box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, 0.5);
     border-radius: 0px 40px 12px 40px;
+
     .cropper {
         width: 100%;
         height: 100px;
@@ -129,6 +137,7 @@ main:not(#guest) {
         border: 2px;
         border-radius: 0px 40px 12px 40px;
     }
+
     img {
         width: 100%;
         height: 250px;
@@ -150,6 +159,7 @@ main:not(#guest) {
     min-height: 500px;
     box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, 0.5);
     border-radius: 0px 40px 12px 40px;
+
     img {
         width: 100%;
         height: 250px;
